--- a/CSS/donation_1_styles.css
+++ b/CSS/donation_1_styles.css
@@ -1,10 +1,11 @@
 body {
     margin: 0;
     padding-top: 40px;
-    color: #2e323c;
-    background: #256D85;
+    color: #222222;
+    background: #00b6a1;
     position: relative;
     height: 100%;
+    font-family: Montserrat;
 }
 .account-settings .user-profile {
     margin: 0 0 1rem 0;
@@ -36,7 +37,7 @@ body {
 }
 .account-settings .about h5 {
     margin: 0 0 15px 0;
-    color: #007ae1;
+    color: #f85a40;
 }
 .account-settings .about p {
     font-size: 0.825rem;
@@ -53,7 +54,7 @@ body {
 
 .card {
     /* background: #ffffff; */
-    background: #DFF6FF;
+    background: #effff;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -63,27 +64,27 @@ body {
 .donate-btn{
   margin: 5% 3% 5% 0;
 }
-#footer {
+/*#footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 5rem;
    padding-top: 20px;
    text-align: center;
-   background-color: #06283D;
-   color: #DFF6FF;
+   background-color: #f85a40;
+   color: #008374;
    font-family: "Montserrat";
    line-height: 1.5;
    font-size: 0.8rem;
    /* padding-bottom: 30px; */
  }
-.social-media{
+/*.social-media{
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 20px;
-  color: #256D85;
+  color: #00b6a1;
   font-size: 1rem;
-}
+}*/
 #page-container {
   position: relative;
   min-height: 100vh;
